Modified new log entry form

--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -76,15 +76,26 @@ Control Room Log New Entry
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-				    	{{ form_label(log_entry.log_supportFile) }}
-                                        {{ form_errors(log_entry.log_supportFile) }}
-                                        {{ form_widget(log_entry.log_supportFile) }}
-                                    </div>
-                                </div>
-                            </div>
+                            <div class="row">   
+				    <div class="form-group">
+					<div class="col-md-2">
+					    {{ form_label(log_entry.logFiles) }}
+					    {{ form_errors(log_entry.logFiles) }}
+					</div>
+					<div class="col-md-6">
+					    <ul class="files list-unstyled" data-prototype="{{ form_widget(log_entry.logFiles.vars.prototype.fileName)|e('html_attr') }} {{ form_widget(log_entry.logFiles.vars.prototype.file)|e('html_attr') }} ">
+						{# iterate over each existing location and render its fields #}
+						{% for logFile in log_entry.logFiles %}
+						    <li>
+							{{ form_label(logFile.fileName) }} {{ form_widget(logFile.fileName) }}
+                                                        {{ form_label(logFile.file) }} {{ form_widget(logFile.file) }}
+                                                    </li>
+						{% endfor %}
+					    </ul>
+					</div>
+					{% do log_entry.logFiles.setRendered %}
+				    </div>
+				</div><br>
                         <br>               
                         {{ form_widget(log_entry.submit) }}
                         {{ form_end(log_entry) }}
@@ -100,6 +111,12 @@ Control Room Log New Entry
 {% endblock %}
 {% block scripts %}
     <script type="text/javascript">
+        
+        var $collectionHolder;
+        // setup an "add a file" link
+        var $addFileLink = $('<a href="#" class="add_file_link">Add a new file</a>');
+        var $newLinkLi = $('<li></li>').append($addFileLink);
+        
         $(function () {
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
@@ -116,7 +133,56 @@ Control Room Log New Entry
         
         $(document).ready(function() {
             setTime();
+            
+	    // Get the ul that holds the collection of files
+            $collectionHolder = $('ul.files');
+            // add a delete link to all of the existing files form li elements
+            $collectionHolder.find('li').each(function() {
+                addFileFormDeleteLink($(this));
+            });    
+        
+            // Get the ul that holds the collection of locations
+            $collectionHolder = $('ul.files');
+            // add the "add a file" anchor and li to the files ul
+            $collectionHolder.append($newLinkLi);
+            // count the current form inputs we have (e.g. 2), use that as the new
+            // index when inserting a new item (e.g. 2)
+            $collectionHolder.data('index', $collectionHolder.find(':input').length);
+            $addFileLink.on('click', function(e) {
+                // prevent the link from creating a "#" on the URL
+                e.preventDefault();
+                // add a new filen form (see next code block)
+                addFileForm($collectionHolder, $newLinkLi);
+            });
         });
+        
+        function addFileForm($collectionHolder, $newLinkLi) {
+            // Get the data-prototype explained earlier
+            var prototype = $collectionHolder.data('prototype');
+            // get the new index
+            var index = $collectionHolder.data('index');
+            // Replace '__name__' in the prototype's HTML to
+            // instead be a number based on how many items we have
+            var newForm = prototype.replace(/__name__/g, index);
+            // increase the index with one for the next item
+            $collectionHolder.data('index', index + 1);
+            // Display the form in the page in an li, before the "Add a File" link li
+            var $newFormLi = $('<li></li>').append(newForm);
+            $newLinkLi.before($newFormLi);
+            
+            addFileFormDeleteLink($newFormLi);
+        }
+        
+        function addFileFormDeleteLink($fileFormLi) {
+            var $removeFormA = $('<a href="#">Delete this File</a>');
+            $fileFormLi.append($removeFormA);
+            $removeFormA.on('click', function(e) {
+                // prevent the link from creating a "#" on the URL
+                e.preventDefault();
+                // remove the li for the file form
+                $fileFormLi.remove();
+            });
+        }
         
         function setTime(){
             var d = Date();
