--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -130,8 +130,18 @@ Control Room Log Edit
 						{# iterate over each existing location and render its fields #}
 						{% for logFile in log_entry.logFiles %}
 						    <li>
-							{{ form_label(logFile.fileName) }} {{ form_widget(logFile.fileName) }}
-                                                        {{ form_label(logFile.file) }} {{ form_widget(logFile.file) }}
+							<div class="col-md-4">
+                                                            {{ form_label(logFile.fileName) }}
+                                                        </div>
+                                                        <div class="col-md-8">
+                                                            {{ form_widget(logFile.fileName) }}
+                                                        </div>
+                                                        <div class="col-md-4">
+                                                            {{ form_label(logFile.file) }}
+                                                        </div>
+                                                        <div class="col-md-8">
+                                                            {{ form_widget(logFile.file) }}
+                                                        </div>
                                                     </li>
 						{% endfor %}
 					    </ul>
