added log support file images to pdf report

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -291,7 +291,7 @@ Control Room Log Edit
                 // add a new filen form (see next code block)
                 addFileForm($collectionHolder, $newLinkLi);
             });
-            $('.vich-file').children("a").attr("target","_blank");
+            //$('.vich-file').children("a").attr("target","_blank");
         });
         
         function addFileForm($collectionHolder, $newLinkLi) {
