Modified pdf template

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -134,7 +134,7 @@
                 {% for image in images %}
                     <div class="row">
                         <div class="col-md-12">
-                            <img width="650" src="{{ image.file }}" alt="{{ image.fileName }}">
+                            <img width="650" src="https://eventcontrol.nb221.com/log_support_direct/{{ image.fileName }}" alt="{{ image.fileName }}">
                         </div>
                     </div>
                 {% endfor %}
