debug pdf template

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -135,6 +135,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <img width="650" src="https://eventcontrol.nb221.com/log_support_direct/{{ image.fileName }}" alt="{{ image.fileName }}">
+                            <img width="650" src="https://eventcontrol.nb221.com/log_support_direct/59c27a2a55a96_Hayesfield%20Mockup.png" alt="{{ image.fileName }}">
                         </div>
                     </div>
                 {% endfor %}
