debug pdf template

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -138,7 +138,7 @@
                             {{ image.fileName }}
                         </div>
                         <div class="col-md-12">
-                            <img width="650" src="https://eventcontrol.nb221.com/log_support_direct/59c27a2a55a96_Hayesfield%20Mockup.png">
+                            <img width="650" src="https://www.w3schools.com/css/img_fjords.jpg">
                         </div>
                     </div>
                 {% endfor %}
