--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -131,14 +131,13 @@
             </div>
                 
             {% if images is not null %}
-                Supporting Files:
                 {% for image in images %}
                     <div class="row">
                         <div class="col-md-12">
-                            {{ image.fileName }}
+                            Supporting File: {{ image.fileName }}
                         </div>
                         <div class="col-md-12">
-                            <img width="650" src="https://www.w3schools.com/css/img_fjords.jpg">
+                            <img width="650" src="https://eventcontrol.nb221.com/log_support_direct/59c27bb00375d_TWU_YELLOW_NO-TAG_RGB.jpg" >
                         </div>
                     </div>
                 {% endfor %}
