debug pdf template

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -138,6 +138,8 @@
                         </div>
                         <div class="col-md-12">
                             <img width="650" src="https://eventcontrol.nb221.com/log_support_direct/59c27bb00375d_TWU_YELLOW_NO-TAG_RGB.jpg" >
+                            <img width="650" src="{{ log_support_directory }}/59c27bb00375d_TWU_YELLOW_NO-TAG_RGB.jpg" >
+                            
                         </div>
                     </div>
                 {% endfor %}
