--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -137,9 +137,7 @@
                             Supporting File: {{ image.fileName }}
                         </div>
                         <div class="col-md-12">
-                            <img width="650" src="https://eventcontrol.nb221.com/log_support_direct/59c27bb00375d_TWU_YELLOW_NO-TAG_RGB.jpg" >
-                            <img width="650" src="{{ log_support_directory }}/59c27bb00375d_TWU_YELLOW_NO-TAG_RGB.jpg" >
-                            
+                            <img width="500" src="{{ log_support_directory }}/{{ image.fileName }}" >
                         </div>
                     </div>
                 {% endfor %}
