Modified pdf image width

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -137,7 +137,7 @@
                             Supporting File: {{ image.fileName }}
                         </div>
                         <div class="col-md-12">
-                            <img width="500" src="{{ log_support_directory }}/{{ image.fileName }}" >
+                            <img height="400" src="{{ log_support_directory }}/{{ image.fileName }}" >
                         </div>
                     </div>
                 {% endfor %}
