--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -134,7 +134,7 @@
                                 {% for image in images %}
                                     {{ image.fileName }}
                                     <br>
-                                    <img height="400" src="{{ log_support_directory }}/{{ image.fileName }}" ><br>
+                                    <img width="300" src="{{ log_support_directory }}/{{ image.fileName }}" ><br>
                                 {% endfor %}
                             </div>
                         </div>
