--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -83,6 +83,14 @@
     border-color: #2e6da4;
 }
 
+.responsive-content iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .link-unstyled {
   &,
   &:visited,
