--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -6,7 +6,7 @@ Event Control
     {% embed '3-9.html.twig' %}
         {% block content %}
             {% if back is defined %}
-                <div>
+                <div class="btn-block btn">
                     <a href="{{ back }}">Back to Log Entry</a>
                 </div>
             {% endif %}
