--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -7,8 +7,8 @@ Event Control
         {% block content %}
             {% if back is defined %}
             <div class="row">
-                <div class="btn btn-block">
-                    <a href="{{ back }}">Back to Log Entry</a>
+                <div class="col-md-12">
+                    <a class="btn btn-blcok" role="button" href="{{ back }}">Back to Log Entry</a>
                 </div>
             </div>
             {% endif %}
