--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -8,7 +8,7 @@ Event Control
             {% if back is defined %}
             <div class="row">
                 <div class="col-md-12">
-                    <a class="btn btn-blcok" role="button" href="{{ back }}">Back to Log Entry</a>
+                    <a class="btn btn-block btn-primary" role="button" href="{{ back }}">Back to Log Entry</a>
                 </div>
             </div>
             {% endif %}
