Added command scheduler to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -190,6 +190,13 @@
                 </a>
             </li>
             <li>
+                <a href="https://eventcontrol.nb221.com/command-scheduler/list" style="margin-bottom:4px;white-space: normal;" role="button">
+                    <div class="row">
+                        Command Scheduler
+                    </div>
+                </a>
+            </li>
+            <li>
                 <a href="{{ path('ups_list') }}" style="margin-bottom:4px;white-space: normal;" role="button">
                     <div class="row">
                         UPS System Settings
