debug people counting log

--- a/app/Resources/views/peopleCountingLog.html.twig
+++ b/app/Resources/views/peopleCountingLog.html.twig
@@ -17,7 +17,9 @@ People Counting Logs
                             No chart available
                         {% else %}
                             <div id="linechart" style="min-width: 400px; height: 500px; margin: 0 auto"></div>
-                        {% endif %}  
+                        {% endif %}
+                        
+                        {{ venues }}
                     </div>
                 </div>
             </div>
