--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -482,7 +482,7 @@
     }
     
     function webSocketTest() {
-        var websocket = WS.connect("wss://socket.eventcontrol.nb221.com:21462",
+        var webSocket = WS.connect("wss://socket.eventcontrol.nb221.com:21462",
             {
                 protocolVersion: 8,
                 origin: 'https://socket.eventcontrol.nb221.com:21462',
