--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -482,12 +482,7 @@
     }
     
     function webSocketTest() {
-        var webSocket = WS.connect("wss://socket.eventcontrol.nb221.com:21462",
-            {
-                protocolVersion: 8,
-                origin: 'https://socket.eventcontrol.nb221.com:21462',
-                rejectUnauthorized: false
-        });
+        var webSocket = WS.connect("wss://socket.eventcontrol.nb221.com:21462");
         webSocket.on("socket/connect", function(session){
 
             //the callback function in "subscribe" is called everytime an event is published in that channel.
@@ -496,6 +491,11 @@
             });
 
             session.publish("acme/channel", "This is a message from the sidebar client!");
+        });
+        webSocket.on("socket/disconnect", function(error){
+        //error provides us with some insight into the disconnection: error.reason and error.code
+
+            console.log("Disconnected for " + error.reason + " with code " + error.code);
         });
         
     }
